fix(header): hamburger wrap z-index

--- a/gitpen/src/app/header/header.component.scss
+++ b/gitpen/src/app/header/header.component.scss
@@ -15,6 +15,7 @@ body {
   &.white {
     display: none;
   }
+  z-index: 100;
 }
 
 .hamburger {
@@ -25,7 +26,7 @@ body {
   position: fixed;
   top: 20px;
   left: 15px;
-  z-index: 1000;
+  z-index: 100;
   &.white {
     display: none;
   }
